Fixed logic and styling issues
Group 3 cards in each row issue fixed

Card body text extending too far fixed

--- a/Photo_Gallery/main1.css
+++ b/Photo_Gallery/main1.css
@@ -3,20 +3,36 @@
   margin: 0;
 }
 
-
+/* Resize container for large screens*/
+@media (min-width: 1200px) {
+  .container {
+    max-width: 80%;
+  }
+}
 
 /* Equal-height card images*/
 .card-img-top {
-  height: 20vw;
+  height: 25vw;
   object-fit: cover;
 }
 
-/* Equal height card text values to avoid long columns of text */
-.card-text {
-  font-size: 19px;
-  text-overflow: ellipsis;
-  white-space: nowrap;
+@media (max-width: 576px) {
+  .card-img-top {
+    height: 60vw;
+  }
+}
+
+/* resize card body*/
+.card-body {
+  max-height: 10vw;
   overflow: hidden;
+}
+
+@media (max-width: 576px) {
+  .card-body {
+    min-height: 40vw;
+    overflow: hidden;
+  }
 }
 
 /** Navbar CSS**/
@@ -50,19 +66,28 @@ body {
   font-size: 25px;
 }
 
+.logo1 {
+  float: left;
+  padding: 13px 0px 15px 25px;
+  transition: 0.4s;
+  transition-delay: 0.25s;
+  font-size: 25px;
+}
+
 .vertical {
   float: left;
   padding: 13px;
+  padding-left: 0px;
   font-size: 25px;
   font-style: bold;
-  margin: 25px 0px 22px 0px;
+  margin: 25px 0px 20px 0px;
   transition: 0.4s;
   transition-delay: 0.25s;
   border-right: 1px solid black;
 }
 
 header {
-  margin-top: 10%;
+  margin-top: 100px;
 }
 
 /** LIGHTBOX MARKUP **/
@@ -86,7 +111,7 @@ header {
   /** Pad the lightbox image */
   max-width: 90%;
   max-height: 80%;
-  margin-top: 2%;
+  margin-top: 10vh;
 }
 
 .lightbox:target {
